chores - adding media query  responsive to layout for mobile screen

--- a/style.css
+++ b/style.css
@@ -141,3 +141,16 @@ li {
   color: #98ca9e;
   margin-right: 10px;
 }
+
+/* Adding Media Queries */
+
+@media (max-width: 786px) {
+  .pricing {
+    flex-direction: column;
+  }
+
+  .container {
+    margin: 20px;
+    padding: 40px 30px;
+  }
+}
